# ChangeLog for dev-util/subversion
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.291 2008/01/28 12:23:41 armin76 Exp $

  28 Jan 2008; Raúl Porcel <armin76@gentoo.org> subversion-1.4.6.ebuild:
  alpha/ia64/sparc/x86 stable wrt #207572

  28 Jan 2008; Brent Baude <ranger@gentoo.org> subversion-1.4.6.ebuild:
  Marking subversion-1.4.6 ppc and ppc64 for bug 207572

  27 Jan 2008; Benedikt Böhm <hollow@gentoo.org> subversion-1.4.5.ebuild,
  subversion-1.4.6.ebuild:
  remove obsolete apr_config/apu_config

  27 Jan 2008; Benedikt Böhm <hollow@gentoo.org>
  -files/subversion-1.3.1-neon-0.26.patch, -files/subversion-db4.patch,
  -subversion-1.3.2-r3.ebuild, subversion-1.4.5.ebuild,
  subversion-1.4.6.ebuild:
  remove subversion-1.3.2-r3 wrt #203578

  15 Jan 2008; Benedikt Böhm <hollow@gentoo.org> subversion-1.4.6.ebuild:
  fix #205807

  28 Dec 2007; Benedikt Böhm <hollow@gentoo.org> subversion-1.4.6.ebuild:
  fix #203564

*subversion-1.4.6 (28 Dec 2007)

  28 Dec 2007; Benedikt Böhm <hollow@gentoo.org>
  -files/subversion-1.3.2-neon-0.26.patch,
  -files/subversion-1.4.3-neon-0.26.3.patch, metadata.xml,
  -subversion-1.3.2-r4.ebuild, -subversion-1.4.4-r4.ebuild,
  +subversion-1.4.6.ebuild:
  version bump (fixes #128624, #203257 and maybe #199639, #200082); cleanup

  14 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  subversion-1.4.5.ebuild:
  Stable on amd64 wrt bug #198590.

  13 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  subversion-1.4.5.ebuild:
  ppc stable, bug #198590

  12 Nov 2007; Markus Rothe <corsair@gentoo.org> subversion-1.4.5.ebuild:
  Stable on ppc64; bug #198590

  12 Nov 2007; Jeroen Roovers <jer@gentoo.org> subversion-1.4.5.ebuild:
  Stable for HPPA (bug #198590).

  11 Nov 2007; Raúl Porcel <armin76@gentoo.org> subversion-1.4.5.ebuild:
  alpha/ia64 stable wrt security #198590
