@@ -16,7 +16,7 @@ AUX svnserve.xinetd 332 RMD160 c2fc4eb02da7e7405756fce650b8897f0a9da7f7 SHA1 d7d
 AUX vc-svn.el 16847 RMD160 8665b9a34c8fd9acae40e18aac33026aff3a39d7 SHA1 4d1a5a9331ff96e943244a6d5538e4f0abeac9e7 SHA256 b4979d5df9fba02dbc8ad71d813229222e95ee1e8e89dec3060611d2d6be87aa
 DIST subversion-1.4.5.tar.bz2 4722624 RMD160 159f3eac9168d856a19ffb235c5417757cd5a496 SHA1 acc80381cb670736ad626fee1eb04f36ba7e5fc8 SHA256 763b8c9c16c03adc3ad00ccf1b5b47a08b5ffe94e499d3c87bb02acbc1026b53
 DIST subversion-1.4.6.tar.bz2 4680316 RMD160 ae63877b5d0eeb1c4f28c4388f97897efde7244c SHA1 a9c941e2309744f6a2986200698b60da057a7527 SHA256 6c480c3493b25c4b73fa62d5fef2f8dd40dde1eb1294c53d3495d864230fc124
-EBUILD subversion-1.4.5.ebuild 14290 RMD160 9d842fd2dce202679380949f8619f6f33cf57d8b SHA1 237afb1cad6d9ef2383e813af8a394411bd0aac8 SHA256 417df82805d545ff518a31a647472ee8df5317b7260916d3b338fbc2c82ade89
-EBUILD subversion-1.4.6.ebuild 14721 RMD160 830d58343a342367ff2fbb952f7a3c7a981ccb34 SHA1 7f4dfe5cbaedb6a7f759fc97d1d01b59707e8102 SHA256 7f6d4236d0e1acb43c57b07a17f42423fc8de463612dadb916d1201847c7e4bb
-MISC ChangeLog 50431 RMD160 4be247490a7826a344cb6d1a327cb7b54067bd3d SHA1 6b1cb8ccceeabe766fe431578c396fd6416bfd27 SHA256 e9cd264270885ebd820d747778d8977d4081dda40745219e2992d9d95d25ecf9
+EBUILD subversion-1.4.5.ebuild 14285 RMD160 fb82f5dff8a264f9522e5860993bd23088f821c0 SHA1 4d07df951294309941c3c912a378d25b1842b556 SHA256 27bc3e6c54c7fad7855f28fe1f494db357011193ae265aa382bc687b774416ca
+EBUILD subversion-1.4.6.ebuild 14712 RMD160 8c18ad12de733cf964ab1abffe994d58042e7611 SHA1 df21caeec48b93160d7fd55129ddf111c1d66ea7 SHA256 fb909c2d7a83bf831ebf800c66cfc51ff440e6e0370a3343e8b82711e9421e30
+MISC ChangeLog 50674 RMD160 bc9d140e7299b2848830d2ff2ed80d5c432b6b17 SHA1 b8da47c2e9caef1951bda1d0263e5735723d96d2 SHA256 fc199a5f8e336f2d685c743c0ef18ff8721b00c72666e186d9f79ba89e4c258f
 MISC metadata.xml 160 RMD160 a0f6e133e170b7477018d8584c20e8723f6914fa SHA1 a3b9b520ec43ee1f9b1c7b5c5b8745bf84454c03 SHA256 3c312146c4cb5b912d6f56292242ce3a85c629ca98ee7ef0a84ca575708b44fe
