@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.4.5.ebuild,v 1.11 2008/01/27 21:10:49 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/subversion-1.4.5.ebuild,v 1.12 2008/01/29 15:33:42 hollow Exp $
 
 EAPI="prefix"
 
@@ -137,7 +137,7 @@ src_compile() {
 	econf ${myconf} \
 		--with-apr="${EPREFIX}"/usr/bin/apr-1-config \
 		--with-apr-util="${EPREFIX}"/usr/bin/apu-1-config \
-		$(use_with apache2 apxs ${APXS2}) \
+		$(use_with apache2 apxs ${APXS}) \
 		$(use_with berkdb berkeley-db) \
 		$(use_enable debug maintainer-mode) \
 		$(use_enable nls) \
@@ -225,9 +225,9 @@ src_install () {
 
 	# Install apache2 module config
 	if use apache2 ; then
-		MOD="${APACHE2_MODULESDIR/${APACHE2_BASEDIR}\//}"
-		dodir "${APACHE2_MODULES_CONFDIR}"
-		cat <<EOF >"${ED}/${APACHE2_MODULES_CONFDIR}"/47_mod_dav_svn.conf
+		MOD="${APACHE_MODULESDIR/${APACHE_BASEDIR}\//}"
+		dodir "${APACHE_MODULES_CONFDIR}"
+		cat <<EOF >"${ED}/${APACHE_MODULES_CONFDIR}"/47_mod_dav_svn.conf
 <IfDefine SVN>
 	<IfModule !mod_dav_svn.c>
 		LoadModule dav_svn_module	${MOD}/mod_dav_svn.so
