@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/subversion
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.291 2008/01/28 12:23:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.293 2008/01/29 20:56:46 jer Exp $
+
+  29 Jan 2008; Jeroen Roovers <jer@gentoo.org> subversion-1.4.6.ebuild:
+  Stable for HPPA (bug #207572).
+
+  29 Jan 2008; Benedikt Böhm <hollow@gentoo.org> subversion-1.4.5.ebuild,
+  subversion-1.4.6.ebuild:
+  fix depend.apache usage wrt #208033
 
   28 Jan 2008; Raúl Porcel <armin76@gentoo.org> subversion-1.4.6.ebuild:
   alpha/ia64/sparc/x86 stable wrt #207572
